<resources>

    <string name="facebook_app_id" translatable="false">443190969835868</string>
    <string name="settings_title_current_language">Language</string>

    <string name="settings_title_settings">Settings</string>

    <string name="settings_title_currency">Currency</string>
    <string name="settings_title_current_currency">Currency</string>
    <string name="settings_title_support">Support</string>
    <string name="settings_title_support_email">en@judebo.com</string>
    <string name="button_detail_title">detail</string>

    <string name="add_job_title">You can add vacancies by a web browser</string>
    <string name="add_job_link">https://en.judebo.com/jobs/</string>


    <string name="search_title_search">Search</string>
    <string name="button_share">Share</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="settings_title_language">Language</string>
    <string name="request_geolocation_title">Geolocation</string>
    <string name="request_geolocation_message">Please enable geolocaltion</string>
    <string name="request_geolocation_ok">Ok</string>
    <string name="request_geolocation_cancel">Cancel</string>
    <string name="app_name" translatable="false">Judebo</string>
    <string name="request_request_delete_title" translatable="false">Delete?</string>
    <string name="request_request_delete_message" translatable="false">Are you sure?</string>
    <string name="request_request_delete_ok" translatable="false">Delete</string>
    <string name="request_request_delete_cancel" translatable="false">Cancel</string>
    <string name="edit_item_add_language" translatable="false">Add language</string>
    <string name="edit_item_add_tag" translatable="false">Add skill</string>
    <string name="edit_item_languages_list" translatable="false">languages</string>
    <string name="edit_item_tags_list" translatable="false">Skills</string>
    <string name="settings_title_subsription" translatable="false">Subsription</string>
    <string name="edit_item_title" translatable="false">Title</string>
    <string name="edit_item_company" translatable="false">company</string>
    <string name="edit_item_gross" translatable="false">Gross</string>
    <string name="edit_item_email" translatable="false">email</string>
    <string name="edit_item_phone" translatable="false">phone</string>
    <string name="edit_item_detail" translatable="false">Detail information</string>
    <string name="user_jobs_list_search" translatable="false">Search</string>
    <string name="error_label" translatable="false">Error</string>
    <string name="request_image_access_title" translatable="false">Access</string>
    <string name="request_image_access_message" translatable="false">Need access</string>
    <string name="settings_logout" translatable="false">Logout</string>
    <string name="settings_login" translatable="false">Login</string>
    <string name="settings_email" translatable="false">Email</string>
    <string name="settings_password" translatable="false">Password</string>
    <string name="request_logout_title" translatable="false">Logout</string>
    <string name="request_logout_message" translatable="false">Logout?</string>
    <string name="user_registration_title" translatable="false">Registration</string>
    <string name="user_registration_privacy_title" translatable="false">Privacy rules</string>
    <string name="user_registration_privacy_url" translatable="false">https://ru.judebo.com/login/privacy.php</string>
    <string name="user_registration_agreement_title" translatable="false">Agreement</string>
    <string name="user_registration_agreement_url" translatable="false">https://ru.judebo.com/login/agreement.php</string>
    <string name="user_registration_confirm_password" translatable="false">Confirm password</string>
    <string name="user_registration_activate_account" translatable="false">Please check your email and activate account</string>
    <string name="settings_logout_ok" translatable="false">Ok</string>
    <string name="settings_logout_cancel" translatable="false">Cancel</string>
    <string name="user_registration_rules_accept" translatable="false">Accept</string>
    <string name="user_registration_rules_cancel" translatable="false">Cancel</string>
    <string name="settings_delete_account_title" translatable="false">Delete account</string>
    <string name="settings_delete_account_button" translatable="false">Delete your account</string>
    <string name="settings_delete_account_request_title" translatable="false">Title: Delete</string>
    <string name="settings_delete_account_request_message" translatable="false">You sure?</string>
    <string name="settings_delete_account_request_delete" translatable="false">Yes- delete</string>
    <string name="settings_delete_account_request_cancel" translatable="false">Cancel</string>
    <string name="settings_delete_account_message" translatable="false">Was deleted</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="user_registration_required_field" translatable="false">Required</string>
    <string name="edit_item_required_field" translatable="false">Required</string>

</resources>
