<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:adjustViewBounds="true"
                android:padding="15dp"
                app:srcCompat="@drawable/big_logo_setting" />

            <TextView
                android:gravity="left"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/param_background"
                android:text="@string/settings_title_current_language"
                android:textColor="#000" />

            <LinearLayout
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:id="@+id/langClickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:id="@+id/langIcon_iv"
                    android:src="@drawable/en" />

                <TextView
                    android:textColor="#000"
                    android:id="@+id/lang_tv"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English (English)" />

            </LinearLayout>

            <TextView
                android:gravity="left"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/param_background"
                android:text="@string/settings_title_current_currency"
                android:textColor="#000" />

            <LinearLayout
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:id="@+id/currencyClickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:id="@+id/currencyIcon_iv"
                    android:src="@drawable/irub" />

                <TextView
                    android:textColor="#000"
                    android:id="@+id/currency_tv"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RUB" />

            </LinearLayout>

            <TextView
                android:gravity="left"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/param_background"
                android:text="@string/settings_title_support"
                android:textColor="#000" />

            <TextView
                android:id="@+id/support_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/settings_title_support_email"
                android:textColor="#000" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>